fixed the list rendering and spacing for lab culture

--- a/public/css/screen.css
+++ b/public/css/screen.css
@@ -83,7 +83,7 @@ a:visited {
   color: #848;
 }
 
-li {
+ul {
   list-style-type: square;
 }
 
